public class Medio {
    private Lenguaje lenguaje;

    public Medio() {
        
    }

    public void setLenguaje(Lenguaje lenguaje) {
        this.lenguaje = lenguaje;
    }
}