public class Mensaje{
    public Mensaje(){
        
    }
}