class Retroalimentacion {
    private Mensaje mensaje;

    public Retroalimentacion(Mensaje mensaje) {
        this.mensaje = mensaje;
    }
}