public class Sujeto {
    public Sujeto() {

    }
    
    public void comunicarse(Medio medio, Lenguaje lenguaje) {
          
    }
}