public class Contexto {
    private Mensaje mensaje;

    public Tema(Mensaje mensaje) {
        this.mensaje = mensaje;
    }

    public void setMensaje(Mensaje mensaje) {
        this.mensaje = mensaje;
    }
}