public class Lenguaje {
    private Medio medio;
    public String[] palabras;

    public Lenguaje() {}

    public void setMedio(Medio medio) {
        this.medio = medio;
    }

    public String[] getPalabras() {
        return palabras;
    }
}